--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
   margin: 0;
   box-sizing: border-box;
   font-size: 62.5%;
-  font-family: 'Rubik', sans-serif;
+  font-family: "Rubik", sans-serif;
   background-color: hsl(226, 43%, 10%);
 }
 p {
@@ -115,6 +115,7 @@ p {
 }
 
 .ellipsis {
+  height: 100%;
   margin-right: 1.2rem;
 }
 .row {
@@ -165,9 +166,11 @@ p {
   font-weight: 300;
 }
 
-@media (max-width: 40em) {
+@media (max-width: 77em) {
   .container {
     flex-direction: column;
+    padding-top: 0;
+    padding: 1rem;
   }
 
   .grid {
@@ -175,9 +178,7 @@ p {
   }
 
   .report-card {
-    width: 80%;
     margin: 2rem;
-    margin-left: 0;
   }
 
   .report-heading {
@@ -222,7 +223,7 @@ p {
 
   .card {
     height: 8rem;
-    width: 30rem;
+    width: 100%;
     margin-bottom: 8rem;
   }
 
@@ -231,10 +232,8 @@ p {
     justify-content: space-between;
     align-items: center;
   }
-  
+
   .last-week {
     margin-right: 1rem;
   }
-  
-  
 }
